--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,59 @@ body {
   background-color: #e1e5e8;
 }
 
+
+@keyframes grow-and-shrink {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
+}
+
+#title-canvas {
+  animation: grow-and-shrink 2500ms;
+  will-change: transform;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+#welcome-message {
+  animation: grow-and-shrink 6000ms;
+  will-change: transform;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+.waiting-text::after {
+  position: absolute;
+  content: "";
+  animation: dots 1.5s steps(5, end) infinite;
+}
+
+@keyframes dots {
+  0% {
+    content: "";
+  }
+  20% {
+    content: ".";
+  }
+  40% {
+    content: "..";
+  }
+  60% {
+    content: "...";
+  }
+  80%,
+  100% {
+    content: "....";
+  }
+}
+
+
+
 .custom-scrollbar::-webkit-scrollbar {
   width: 4px;
 }
